# EngineGL-2D

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: engine.cpp  engine.h  main.cpp
src/common/: common.cpp  common.h  io_util.h  standard_quad.cpp  standard_quad.h
src/components/: camera.cpp  camera.h  file_handler.cpp  file_handler.h  input_controller.cpp  input_controller.h
src/components/ui/: font.cpp  font.h  text.cpp  text.h
src/components/ui/widget/: background_skin.cpp  background_skin.h  event_emitter.h  event_types.h  widget_interface.cpp  widget_interface.h
src/components/ui/widget/widgets/: button.h  input.cpp  input.h  label.cpp  label.h  textless_button.cpp  textless_button.h  window.h
src/opengl/: batch.cpp  batch.h  batch_instance_primitives.h  shader.cpp  shader.h  sprite_sheet.cpp  sprite_sheet.h  uniform_data.h
src/subsystems/: main_renderer.cpp  main_renderer.h  resource_service.cpp  resource_service.h  ui_manager.cpp  ui_manager.h
src/subsystems/factories/: factory_interface.h  text_factory.cpp  text_factory.h
test/configs/: resource_configuration.rcfg
test/res/: batch.shader  batch_ui.shader  cyrillic_print_big.sheet  gui.cfg  gui.sheet  panda.cfg  panda.sheet  test.cfg  test.sheet  text.shader
test/res/legacy_code/: batch_test.shader  free_batch.shader  sb_floating_quads.shader  sb_std.shader  test.shader  uib_std.shader
test/res/ui/: cyrillic_print_big.font
test/widgets/: stored_test_scenarios.cpp
